# rags-to-agents

./: README.md  main.py  pyproject.toml
assignments/: 01-homework-allendowney-books.ipynb  03-homework-agent.ipynb
lectures/: openai-sample.ipynb  output.ipynb
lectures/module01/: openai-sample.ipynb  output.ipynb  rag.ipynb  structured-rag.ipynb
lectures/module02/: 01-agents-foundation.ipynb  03-toyaikit.ipynb  04-toyaikit-tools.ipynb
lectures/module03/: 02-tool-call-loop.ipynb  05-beyond-rag.ipynb  06-pydantic.ipynb
